fix search input field width on mobile screens

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1991,7 +1991,7 @@ body.page-template .post-title {
     }
 
     .site-search input {
-        width: 100%;
+        width: 100% !important;
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
         box-sizing: border-box;
